--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-calendars": "^1.300.0",
     "react-native-gesture-handler": "~1.6.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "udacifitness-calendar-fix": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
